packages/flutter_wasmi/macos/Classes/frb.h

typedef struct DartCObject DartCObject;
typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef struct DartCObject *WireSyncReturn;
typedef union Value2Kind {
  struct wire_Value2_I32 *I32;
  struct wire_Value2_I64 *I64;
  struct wire_Value2_F32 *F32;
  struct wire_Value2_F64 *F64;
  struct wire_Value2_FuncRef *FuncRef;
  struct wire_Value2_ExternRef *ExternRef;
} Value2Kind;
typedef struct wire_Value2 {
  int32_t tag;
  union Value2Kind *kind;
} wire_Value2;
typedef struct wire_list_value_2 {
  struct wire_Value2 *ptr;
  int32_t len;
} wire_list_value_2;
typedef struct wire_WasmiInstanceId {
  uint32_t field0;
} wire_WasmiInstanceId;
typedef struct wire_WasmiModuleId {
  uint32_t field0;
} wire_WasmiModuleId;
typedef struct wire_list_value_ty {
  int32_t *ptr;
  int32_t len;
} wire_list_value_ty;
typedef struct wire_WasmMemoryType {
  uint32_t initial_pages;
  uint32_t *maximum_pages;
} wire_WasmMemoryType;
typedef struct wire_TableType2 {
  uint32_t min;
  uint32_t *max;
} wire_TableType2;
typedef struct wire_Global {
  const void *ptr;
} wire_Global;
typedef struct wire_Memory {
  const void *ptr;
} wire_Memory;
typedef struct wire_Table {
  const void *ptr;
} wire_Table;
typedef struct wire_Func {
  const void *ptr;
} wire_Func;
typedef struct wire_ModuleImport {
  struct wire_uint_8_list *module;
  struct wire_uint_8_list *name;
  struct wire_ExternalValue value;
} wire_ModuleImport;
typedef struct wire_list_module_import {
  struct wire_ModuleImport *ptr;
  int32_t len;
} wire_list_module_import;
WireSyncReturn wire_grow_table__method__WasmiModuleId(struct wire_WasmiModuleId *that,
                                                      struct wire_Table table,
                                                      uint32_t delta,
                                                      struct wire_Value2 *value);
WireSyncReturn wire_get_table__method__WasmiModuleId(struct wire_WasmiModuleId *that,
                                                     struct wire_Table table,
                                                     uint32_t index);
WireSyncReturn wire_set_table__method__WasmiModuleId(struct wire_WasmiModuleId *that,
                                                     struct wire_Table table,
                                                     uint32_t index,
                                                     struct wire_Value2 *value);
WireSyncReturn wire_fill_table__method__WasmiModuleId(struct wire_WasmiModuleId *that,
                                                      struct wire_Table table,
                                                      uint32_t index,
                                                      struct wire_Value2 *value,
                                                      uint32_t len);
WireSyncReturn wire_link_imports__method__WasmiModuleId(struct wire_WasmiModuleId *that,
                                                        struct wire_list_module_import *imports);
struct wire_Func new_Func(void);
struct wire_Global new_Global(void);
struct wire_Memory new_Memory(void);
struct wire_Table new_Table(void);
struct wire_TableType2 *new_box_autoadd_table_type_2_0(void);
uint32_t *new_box_autoadd_u32_0(uint32_t value);
struct wire_Value2 *new_box_autoadd_value_2_0(void);
struct wire_WasmMemoryType *new_box_autoadd_wasm_memory_type_0(void);
struct wire_WasmiInstanceId *new_box_autoadd_wasmi_instance_id_0(void);
struct wire_WasmiModuleId *new_box_autoadd_wasmi_module_id_0(void);
struct wire_list_module_import *new_list_module_import_0(int32_t len);
struct wire_list_value_2 *new_list_value_2_0(int32_t len);
struct wire_list_value_ty *new_list_value_ty_0(int32_t len);
struct wire_uint_8_list *new_uint_8_list_0(int32_t len);
void drop_opaque_Func(const void *ptr);
const void *share_opaque_Func(const void *ptr);
void drop_opaque_Global(const void *ptr);
const void *share_opaque_Global(const void *ptr);
void drop_opaque_Memory(const void *ptr);
const void *share_opaque_Memory(const void *ptr);