packages/wasmi/lib/src/bridge_generated.io.dart


  WireSyncReturn wire_grow_table__method__WasmiModuleId(
    ffi.Pointer<wire_WasmiModuleId> that,
    wire_Table table,
    int delta,
    ffi.Pointer<wire_Value2> value,
  ) {
    return _wire_grow_table__method__WasmiModuleId(
      that,
      table,
      delta,
      value,
    );
  }

  late final _wire_grow_table__method__WasmiModuleIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>,
                  wire_Table, ffi.Uint32, ffi.Pointer<wire_Value2>)>>(
      'wire_grow_table__method__WasmiModuleId');
  late final _wire_grow_table__method__WasmiModuleId =
      _wire_grow_table__method__WasmiModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>, wire_Table,
              int, ffi.Pointer<wire_Value2>)>();

  WireSyncReturn wire_get_table__method__WasmiModuleId(
    ffi.Pointer<wire_WasmiModuleId> that,
    wire_Table table,
    int index,
  ) {
    return _wire_get_table__method__WasmiModuleId(
      that,
      table,
      index,
    );
  }

  late final _wire_get_table__method__WasmiModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>, wire_Table,
              ffi.Uint32)>>('wire_get_table__method__WasmiModuleId');
  late final _wire_get_table__method__WasmiModuleId =
      _wire_get_table__method__WasmiModuleIdPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmiModuleId>, wire_Table, int)>();

  WireSyncReturn wire_set_table__method__WasmiModuleId(
    ffi.Pointer<wire_WasmiModuleId> that,
    wire_Table table,
    int index,
    ffi.Pointer<wire_Value2> value,
  ) {
    return _wire_set_table__method__WasmiModuleId(
      that,
      table,
      index,
      value,
    );
  }

  late final _wire_set_table__method__WasmiModuleIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>,
                  wire_Table, ffi.Uint32, ffi.Pointer<wire_Value2>)>>(
      'wire_set_table__method__WasmiModuleId');
  late final _wire_set_table__method__WasmiModuleId =
      _wire_set_table__method__WasmiModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>, wire_Table,
              int, ffi.Pointer<wire_Value2>)>();

  WireSyncReturn wire_fill_table__method__WasmiModuleId(
    ffi.Pointer<wire_WasmiModuleId> that,
    wire_Table table,
    int index,
    ffi.Pointer<wire_Value2> value,
    int len,
  ) {
    return _wire_fill_table__method__WasmiModuleId(
      that,
      table,
      index,
      value,
      len,
    );
  }

  late final _wire_fill_table__method__WasmiModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmiModuleId>,
              wire_Table,
              ffi.Uint32,
              ffi.Pointer<wire_Value2>,
              ffi.Uint32)>>('wire_fill_table__method__WasmiModuleId');
  late final _wire_fill_table__method__WasmiModuleId =
      _wire_fill_table__method__WasmiModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>, wire_Table,
              int, ffi.Pointer<wire_Value2>, int)>();

  WireSyncReturn wire_link_imports__method__WasmiModuleId(
    ffi.Pointer<wire_WasmiModuleId> that,
    ffi.Pointer<wire_list_module_import> imports,
  ) {
    return _wire_link_imports__method__WasmiModuleId(
      that,
      imports,
    );
  }

  late final _wire_link_imports__method__WasmiModuleIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>,
                  ffi.Pointer<wire_list_module_import>)>>(
      'wire_link_imports__method__WasmiModuleId');
  late final _wire_link_imports__method__WasmiModuleId =
      _wire_link_imports__method__WasmiModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>,
              ffi.Pointer<wire_list_module_import>)>();

  wire_Func new_Func() {
    return _new_Func();
  }

  late final _new_FuncPtr =
      _lookup<ffi.NativeFunction<wire_Func Function()>>('new_Func');
  late final _new_Func = _new_FuncPtr.asFunction<wire_Func Function()>();

  wire_Global new_Global() {
    return _new_Global();
  }

  late final _new_GlobalPtr =
      _lookup<ffi.NativeFunction<wire_Global Function()>>('new_Global');
  late final _new_Global = _new_GlobalPtr.asFunction<wire_Global Function()>();

  wire_Memory new_Memory() {
    return _new_Memory();
  }

  late final _new_MemoryPtr =
      _lookup<ffi.NativeFunction<wire_Memory Function()>>('new_Memory');
  late final _new_Memory = _new_MemoryPtr.asFunction<wire_Memory Function()>();

  wire_Table new_Table() {
    return _new_Table();
  }

  late final _new_TablePtr =
      _lookup<ffi.NativeFunction<wire_Table Function()>>('new_Table');
  late final _new_Table = _new_TablePtr.asFunction<wire_Table Function()>();

  ffi.Pointer<wire_TableType2> new_box_autoadd_table_type_2_0() {
    return _new_box_autoadd_table_type_2_0();
  }

  late final _new_box_autoadd_table_type_2_0Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_TableType2> Function()>>(
          'new_box_autoadd_table_type_2_0');
  late final _new_box_autoadd_table_type_2_0 =
      _new_box_autoadd_table_type_2_0Ptr
          .asFunction<ffi.Pointer<wire_TableType2> Function()>();

  ffi.Pointer<ffi.Uint32> new_box_autoadd_u32_0(
    int value,
  ) {
    return _new_box_autoadd_u32_0(
      value,
    );
  }

  late final _new_box_autoadd_u32_0Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Uint32> Function(ffi.Uint32)>>(
          'new_box_autoadd_u32_0');
  late final _new_box_autoadd_u32_0 = _new_box_autoadd_u32_0Ptr
      .asFunction<ffi.Pointer<ffi.Uint32> Function(int)>();

  ffi.Pointer<wire_Value2> new_box_autoadd_value_2_0() {
    return _new_box_autoadd_value_2_0();
  }

  late final _new_box_autoadd_value_2_0Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_Value2> Function()>>(
          'new_box_autoadd_value_2_0');
  late final _new_box_autoadd_value_2_0 = _new_box_autoadd_value_2_0Ptr
      .asFunction<ffi.Pointer<wire_Value2> Function()>();

  ffi.Pointer<wire_WasmMemoryType> new_box_autoadd_wasm_memory_type_0() {
    return _new_box_autoadd_wasm_memory_type_0();
  }

  late final _new_box_autoadd_wasm_memory_type_0Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_WasmMemoryType> Function()>>(
          'new_box_autoadd_wasm_memory_type_0');
  late final _new_box_autoadd_wasm_memory_type_0 =
      _new_box_autoadd_wasm_memory_type_0Ptr
          .asFunction<ffi.Pointer<wire_WasmMemoryType> Function()>();

  ffi.Pointer<wire_WasmiInstanceId> new_box_autoadd_wasmi_instance_id_0() {
    return _new_box_autoadd_wasmi_instance_id_0();
  }

  late final _new_box_autoadd_wasmi_instance_id_0Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_WasmiInstanceId> Function()>>(
          'new_box_autoadd_wasmi_instance_id_0');
  late final _new_box_autoadd_wasmi_instance_id_0 =
      _new_box_autoadd_wasmi_instance_id_0Ptr
          .asFunction<ffi.Pointer<wire_WasmiInstanceId> Function()>();

  ffi.Pointer<wire_WasmiModuleId> new_box_autoadd_wasmi_module_id_0() {
    return _new_box_autoadd_wasmi_module_id_0();
  }

  late final _new_box_autoadd_wasmi_module_id_0Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_WasmiModuleId> Function()>>(
          'new_box_autoadd_wasmi_module_id_0');
  late final _new_box_autoadd_wasmi_module_id_0 =
      _new_box_autoadd_wasmi_module_id_0Ptr
          .asFunction<ffi.Pointer<wire_WasmiModuleId> Function()>();

  ffi.Pointer<wire_list_module_import> new_list_module_import_0(
    int len,
  ) {
    return _new_list_module_import_0(
      len,
    );
  }

  late final _new_list_module_import_0Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_list_module_import> Function(
              ffi.Int32)>>('new_list_module_import_0');
  late final _new_list_module_import_0 = _new_list_module_import_0Ptr
      .asFunction<ffi.Pointer<wire_list_module_import> Function(int)>();

  ffi.Pointer<wire_list_value_2> new_list_value_2_0(
    int len,
  ) {
    return _new_list_value_2_0(
      len,
    );
  }

  late final _new_list_value_2_0Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_list_value_2> Function(
              ffi.Int32)>>('new_list_value_2_0');
  late final _new_list_value_2_0 = _new_list_value_2_0Ptr
      .asFunction<ffi.Pointer<wire_list_value_2> Function(int)>();

  ffi.Pointer<wire_list_value_ty> new_list_value_ty_0(
    int len,
  ) {
    return _new_list_value_ty_0(
      len,
    );
  }

  late final _new_list_value_ty_0Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_list_value_ty> Function(
              ffi.Int32)>>('new_list_value_ty_0');
  late final _new_list_value_ty_0 = _new_list_value_ty_0Ptr
      .asFunction<ffi.Pointer<wire_list_value_ty> Function(int)>();

  ffi.Pointer<wire_uint_8_list> new_uint_8_list_0(
    int len,
  ) {
    return _new_uint_8_list_0(
      len,
    );
  }

  late final _new_uint_8_list_0Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_uint_8_list> Function(
              ffi.Int32)>>('new_uint_8_list_0');
  late final _new_uint_8_list_0 = _new_uint_8_list_0Ptr
      .asFunction<ffi.Pointer<wire_uint_8_list> Function(int)>();

  void drop_opaque_Func(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _drop_opaque_Func(
      ptr,
    );
  }

  late final _drop_opaque_FuncPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'drop_opaque_Func');
  late final _drop_opaque_Func =
      _drop_opaque_FuncPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> share_opaque_Func(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _share_opaque_Func(
      ptr,
    );
  }

  late final _share_opaque_FuncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>)>>('share_opaque_Func');
  late final _share_opaque_Func = _share_opaque_FuncPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>();

  void drop_opaque_Global(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _drop_opaque_Global(
      ptr,
    );
  }

  late final _drop_opaque_GlobalPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'drop_opaque_Global');
  late final _drop_opaque_Global =
      _drop_opaque_GlobalPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> share_opaque_Global(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _share_opaque_Global(
      ptr,
    );
  }

  late final _share_opaque_GlobalPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>)>>('share_opaque_Global');
  late final _share_opaque_Global = _share_opaque_GlobalPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>();

  void drop_opaque_Memory(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _drop_opaque_Memory(
      ptr,
    );
  }

  late final _drop_opaque_MemoryPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'drop_opaque_Memory');
  late final _drop_opaque_Memory =
      _drop_opaque_MemoryPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> share_opaque_Memory(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _share_opaque_Memory(
      ptr,
    );
  }

  late final _share_opaque_MemoryPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>)>>('share_opaque_Memory');
  late final _share_opaque_Memory = _share_opaque_MemoryPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>();
